# mesh2urdf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
src/mesh2urdf/: main.py
src/mesh2urdf/api/: mesh.py  primitive.py  urdf.py
src/mesh2urdf/core/: mesh_cache.py  mesh_loader.py  primitive_fitter.py  urdf_generator.py
src/mesh2urdf/models/: schema.py
src/mesh2urdf/static/: index.html
src/mesh2urdf/static/css/: style.css
src/mesh2urdf/static/js/: app.js  primitives.js  ui.js  urdf_model.js  viewer.js
tests/: conftest.py  test_api.py  test_mesh_loader.py  test_primitive_api.py  test_primitive_fitter.py  test_urdf_api.py  test_urdf_generator.py
tests/fixtures/: cube.stl
