[project]
name = "mesh2urdf"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh2urdf"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
fastapi = ">=0.110"
uvicorn = ">=0.29"
trimesh = ">=4.0"
numpy = ">=1.26"
lxml = ">=5.0"
python-multipart = ">=0.0.9"
pydantic = ">=2.0"
cachetools = ">=5.0"
scipy = ">=1.12"
networkx = ">=3.0"
rtree = ">=1.0"
shapely = ">=2.0"

[tool.pixi.pypi-dependencies]
mesh2urdf = { path = ".", editable = true }
object2urdf = "*"

[tool.pixi.tasks]
dev = "uvicorn mesh2urdf.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest tests/ -v"
lint = "ruff check src/ tests/"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.27"
ruff = ">=0.4"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
